Fix profile image source path in index.html
Updated the image source path for the profile image.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1> Hello, I'm Hafsa :) </h1>
-  <img id="profile-img" src="C:\Users\Windows\Downloads\Dahbi Hafsa personal branding.jpg" >
+  <img id="profile-img" src="Dahbi Hafsa personal branding.jpg" >
   <p> I love Marketing, Communication, Photography 📸 and Creative Projects ✨. </p>
   
   <h3>Marketing & Communication 📊</h3>
